# engly

./: MEMO.md  README.md  README.md.orig  pyproject.toml  requirements.txt  setup.py  setup_old.py
anly/: history.py  main.py  reading.py  title.py  word_list.py  word_test.py
anly.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
anly/libs/: common.py  newdate.py
data/: history.json  response.json  words.json
dist_old/: engly-0.0.3.2-py3-none-any.whl  engly-0.0.3.3-py3-none-any.whl  engly-0.0.3.5-py3-none-any.whl  engly-0.0.3.6-py3-none-any.whl  engly-0.0.3.9-py3-none-any.whl  engly-0.0.4-py3-none-any.whl  engly-0.0.4.1-py3-none-any.whl  engly-0.0.4.2-py3-none-any.whl  engly-0.0.4.6-py3-none-any.whl  engly-0.0.4.7-py3-none-any.whl  engly-0.0.4.8-py3-none-any.whl  engly-0.0.4.9.1-py3-none-any.whl  engly-0.0.4.9.3-py3-none-any.whl  engly-0.0.4.9.4-py3-none-any.whl  engly-0.0.4.9.5-py3-none-any.whl  engly-0.0.4.9.6-py3-none-any.whl  engly-0.0.4.9.7-py3-none-any.whl  engly-0.0.4.9.8-py3-none-any.whl  engly-0.0.4.9.9-py3-none-any.whl  engly-0.0.5-py3-none-any.whl  engly-0.0.5.1-py3-none-any.whl  engly-0.0.5.2-py3-none-any.whl  engly-0.0.5.3-py3-none-any.whl  engly-0.1.0-py3-none-any.whl  engly-0.1.2-py3-none-any.whl  engly-0.1.3-py3-none-any.whl  engly-0.1.4-py3-none-any.whl  engly-0.1.5-py3-none-any.whl  engly-0.1.8-py3-none-any.whl  engly-0.1.9-py3-none-any.whl  engly-0.1.9.1-py3-none-any.whl
enly/: history.py  reading.py  title.py
enly/libs/: common.py
fig/: fig.html
src/: history.py  reading.py  reading_win.py  test.py  title.py  word_list.py  word_test.py
(+8 files in other folders)
