[project]
name = "nanpapp"
version = "1.0.0"
authors = [
  { name="nanp1311", email="pengin.na11@gmail.com" },
]
description = "English Learning Application"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nanp1311/untitled"
"Bug Tracker" = "https://github.com/nanp1311/untitled/issues"
