# pyproject.toml

[tool.poetry]
name = "nanpapp2"
version = "1.0.8"
description = "English Learning Application"
authors = ["nanp1311 <pengin.na11@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
openai = "0.28"
wxPython = "4.2.1"
plotly = "5.16.1"

[project.scripts]
nanpapp2 = "title:main"
